# dwdweather-cli

./: .gitignore  Makefile  README.md  benchmark_size.py  copy-to-skill.sh  pyproject.toml
documents/: pitfall.md  review1.md  review1_implementation_plan.md
dwdweather/: README.md  api.py  cli.py  errors.py  geocode.py  render.py  run.py  toon.py
dwdweather/commands/: alerts.py  common.py  current.py  describe.py  discovery.py  forecast.py  history.py  stations.py  summary.py
tests/: test_cli.py  test_describe.py  test_units.py
