[project]
name = "dwdweather-dev"
version = "1.0.0"
description = "Development harness for dwdweather CLI"
requires-python = ">=3.11"
dependencies = [
    "dwdweather",
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.uv]
package = false

[tool.uv.sources]
dwdweather = { path = "dwdweather", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["dwdweather"]
